# SpynalTap

./: AGENTS.md  PLAN.md  README.md  TODO.md
GGUF/SpynalTap/: Cargo.toml
GGUF/SpynalTap/.cargo/: config.toml
GGUF/SpynalTap/benches/: analyzer.rs  dequant.rs
GGUF/SpynalTap/cli/: Cargo.toml
GGUF/SpynalTap/lib/src/: error.rs  model.rs
GGUF/SpynalTap/lib/src/analysis/: analyzer.rs  mod.rs  score.rs  stats.rs
GGUF/SpynalTap/lib/src/calibrate/: mod.rs
GGUF/SpynalTap/lib/src/formats/gguf/: reader.rs  verify.rs
GGUF/SpynalTap/lib/src/formats/gguf/dequant/: scalar.rs
GGUF/SpynalTap/lib/src/formats/safetensors/: reader.rs
GGUF/SpynalTap/lib/src/prune/: apply.rs  mod.rs  plan.rs  selection.rs
GGUF/SpynalTap/lib/src/quantize/: apply.rs  mod.rs  q4_1.rs  q4_k.rs  q5_1.rs  q5_k.rs  q6_k.rs  q8_0.rs
GGUF/SpynalTap/lib/src/svd/: config.rs  linalg.rs  plan.rs
GGUF/SpynalTap/lib/tests/: quantize.rs  svd.rs
GGUF/SpynalTap/src/: error.rs  lib.rs
GGUF/SpynalTap/src/formats/gguf/: mod.rs  types.rs  writer.rs
GGUF/SpynalTap/src/formats/gguf/dequant/: mod.rs  scalar.rs  simd.rs
GGUF/SpynalTap/src/formats/safetensors/: mod.rs  writer.rs
GGUF/SpynalTap/src/quantize/: mod.rs  q5_0.rs
GGUF/SpynalTap/src/svd/: apply.rs  mod.rs
GGUF/SpynalTap/tests/: cli_quantize.rs  dequant.rs  quantize.rs  selection_parse.rs
cli/: Cargo.toml  build.rs
cli/src/: main.rs  pipeline.rs
cli/tests/: cli_quantize.rs
lib/: Cargo.toml
lib/benches/: analyzer.rs  dequant.rs
lib/src/: error.rs  lib.rs  model.rs  report.rs
lib/src/analysis/: analyzer.rs  mod.rs  report.rs  score.rs  spectrum.rs  stats.rs
lib/src/calibrate/: mod.rs
lib/src/formats/: mod.rs  onnx.rs
lib/src/formats/gguf/: reader.rs  types.rs  verify.rs  writer.rs
lib/src/formats/gguf/dequant/: lookup.rs  mod.rs  par.rs  scalar.rs  simd.rs
lib/src/formats/safetensors/: reader.rs  writer.rs
lib/src/merge/: average.rs  depth.rs  mod.rs  moe.rs  slerp.rs  strategy.rs  tests.rs  tying.rs
lib/src/prune/: apply.rs  mod.rs  plan.rs  selection.rs
lib/src/quantize/: apply.rs  iq1_m.rs  iq1_s.rs  iq2_s.rs  iq2_xs.rs  iq2_xxs.rs  iq3_s.rs  iq3_xxs.rs  iq4_nl.rs  iq4_xs.rs  mod.rs  q2_k.rs  q3_k.rs  q4_0.rs  q4_1.rs  q4_k.rs  q5_1.rs  q5_k.rs  q6_k.rs  q8_1.rs  q8_k.rs  simd.rs  tq1_0.rs  tq2_0.rs
lib/src/svd/: apply.rs  config.rs  linalg.rs  mod.rs  plan.rs
lib/src/templates/: report.html
lib/src/tests/: dequant.rs  quantize.rs  selection_parse.rs  svd.rs
lib/templates/: report.html
lib/tests/: dequant.rs  quantize.rs  svd.rs
lib/tests/unit/: report.rs
lib/tests/unit/analysis/: analyzer.rs  report.rs  spectrum.rs  stats.rs
lib/tests/unit/formats/: onnx.rs
lib/tests/unit/merge/: average.rs  depth.rs  moe.rs  slerp.rs  strategy.rs  tying.rs
lib/tests/unit/quantize/: iq1_m.rs  iq1_s.rs  iq2_s.rs  iq2_xs.rs  iq2_xxs.rs  iq3_s.rs  iq3_xxs.rs  iq4_nl.rs  iq4_xs.rs  tq1_0.rs  tq2_0.rs
lib/tests/unit/svd/: config.rs  plan.rs
lib/tests/unit/tests/: mod.rs  quantize.rs  selection_parse.rs  svd.rs
scripts/: fix-test-files.ps1  rename-to-tensorkit.ps1
