[package]
name        = "tensorkit"
version     = "0.1.3"
edition     = "2024"
description = "Fast AI model analyzer and transformer-block pruner (GGUF, safetensors)."
license     = "MIT OR Apache-2.0"

[lib]
name = "tensorkit"
path = "src/lib.rs"
# crate-type=["cdylib", "rlib"]
crate-type = ["rlib"]

[features]
default   = []
calibrate = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
]

[dependencies]
# Core
thiserror = "2.0.18"
memmap2   = "0.9.10"
regex     = "1.12.3"
rayon     = "1.12.0"

# Output (used until we write our own faster serializer)
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ONNX protobuf parsing
prost = { version = "0.13", features = ["derive"] }

# Optional: calibration via candle
candle-core         = { version = "0.10.2", optional = true }
candle-nn           = { version = "0.10.2", optional = true }
candle-transformers = { version = "0.10.2", optional = true }
tokenizers          = { version = "0.23.1", optional = true }
hf-hub              = { version = "0.5.0",  optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name    = "dequant"
harness = false

[[bench]]
name    = "analyzer"
harness = false
