[workspace]
resolver = "2"
members = ["lib", "cli"]

# Shared build settings for every member crate. `[profile.*]` blocks at the
# workspace root are inherited by all members that don't override them.
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"

[profile.bench]
inherits      = "release"
debug         = false
