[package]
name        = "spynaltape"
version     = "0.1.0"
edition     = "2021"
description = "CLI for spynaltap: analyze, prune, and SVD-compress AI model files."
license     = "MIT OR Apache-2.0"

[[bin]]
name = "spynaltape"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Core library this binary is a thin wrapper around.
spynaltap = { path = "../lib" }

# Output (used until we write our own faster serializer)
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
